modern landing page

--- a/client-data/index.html
+++ b/client-data/index.html
@@ -102,14 +102,14 @@
 
       <footer>
         <a
-          href="https://www.instagram.com/wbo_whiteboard/"
+          href="https://www.instagram.com/imambonjour/"
           class="smallink"
           rel="external"
           title="Instagram"
           ><img alt="instagram" src="instagram.svg" width="24" height="24"
         /></a>
         <a
-          href="https://github.com/lovasoa/whitebophir"
+          href="https://github.com/imambonjour/onlineboard"
           class="smallink"
           rel="external"
           title="{{translations.view_source}}"
