modern landing page

--- a/client-data/index.html
+++ b/client-data/index.html
@@ -4,120 +4,69 @@
     <meta charset="utf-8" />
     <title>WBO — {{translations.collaborative_whiteboard}}</title>
     <link rel="stylesheet" href="index.css" />
-    <meta name="description" content="{{translations.tagline}}" />
-    <meta
-      name="keywords"
-      content="whiteboard,collaborative,online,draw,paint,shared,realtime,wbo,whitebophir,open-source,GPL,javascript"
-    />
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="favicon.svg" />
-    <link rel="mask-icon" href="favicon.svg" color="black" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:url" content="https://wbo.ophir.dev" />
-    <meta property="og:image" content="{{baseUrl}}/favicon.svg" />
-    <link rel="canonical" href="?lang={{language}}" />
-    {{#languages}}
-    <link rel="alternate" hreflang="{{.}}" href="?lang={{.}}" />
-    {{/languages}}
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#3b82f6" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800&display=swap"
       rel="stylesheet"
     />
   </head>
 
   <body>
-    <header>
-      <h1>WBO</h1>
-      <nav class="lang-selector">
-        <span>{{language}}</span>
-        <ul>
-          {{#languages}}
-          <li>
-            <a href="?lang={{.}}" hreflang="{{.}}" rel="alternate">{{.}}</a>
-          </li>
-          {{/languages}}
-        </ul>
-      </nav>
-    </header>
+    <main class="main-container">
+      <!-- Create Private Board -->
+      <a href="random" class="glass-action">
+        {{{translations.create_private_board}}}
+      </a>
 
-    <main>
-      <section id="description">
-        <img
-          src="frontpage-illustration.svg"
-          alt="Public board illustration"
-          width="600"
-          height="480"
-        />
-        <div class="text">
-          <h3>{{translations.index_title}}</h3>
-          <p>{{{translations.introduction_paragraph}}}</p>
-          <p>{{{translations.share_instructions}}}</p>
+      <!-- Named Private Board (Center) -->
+      <div class="expandable-container">
+        <div id="join-btn" class="glass-action" onclick="toggleJoin()">
+          {{{translations.named_private_board_description}}}
         </div>
-      </section>
+        <form
+          id="named-board-form"
+          class="glass-action collapsed"
+          action="boards"
+          method="GET"
+        >
+          <input
+            type="text"
+            id="board"
+            name="board"
+            required
+            placeholder="{{{translations.board_name_placeholder}}}"
+            autocomplete="off"
+          />
+          <input type="submit" value="Go" />
+        </form>
+      </div>
 
-      <section id="actions">
-        <div>
-          <h3>Public Board</h3>
-          <p>{{{translations.public_board_description}}}</p>
-          <a href="boards/anonymous" class="wbo-button"
-            >{{{translations.open_public_board}}}</a
-          >
-        </div>
-
-        <div>
-          <h3>Private Board</h3>
-          <p>{{{translations.private_board_description}}}</p>
-          <a href="random" class="wbo-button"
-            >{{{translations.create_private_board}}}</a
-          >
-        </div>
-
-        <div>
-          <h3>Join Board</h3>
-          <p>
-            <label for="board"
-              >{{{translations.named_private_board_description}}}</label
-            >
-          </p>
-          <form id="named-board-form" action="boards" method="GET">
-            <input
-              type="text"
-              id="board"
-              name="board"
-              required
-              placeholder="{{{translations.board_name_placeholder}}}"
-            />
-            <input type="submit" value="Go" />
-          </form>
-        </div>
-
-        <div id="recent-boards" class="hidden">
-          <h3>{{{translations.recent_boards}}}</h3>
-        </div>
-      </section>
-
-      <footer>
-        <a
-          href="https://www.instagram.com/imambonjour/"
-          class="smallink"
-          rel="external"
-          title="Instagram"
-          ><img alt="instagram" src="instagram.svg" width="24" height="24"
-        /></a>
-        <a
-          href="https://github.com/imambonjour/onlineboard"
-          class="smallink"
-          rel="external"
-          title="{{translations.view_source}}"
-          ><img alt="github" src="github.svg" width="24" height="24" />
-        </a>
-      </footer>
+      <!-- Public Board -->
+      <a href="boards/anonymous" class="glass-action">
+        {{{translations.open_public_board}}}
+      </a>
     </main>
 
+    <script>
+      function toggleJoin() {
+        const btn = document.getElementById("join-btn");
+        const form = document.getElementById("named-board-form");
+        const input = document.getElementById("board");
+
+        btn.classList.add("hidden");
+        form.classList.remove("collapsed");
+        input.focus();
+
+        // Collapse back if clicked outside
+        document.addEventListener("mousedown", function (e) {
+          if (!form.contains(e.target) && !btn.contains(e.target)) {
+            form.classList.add("collapsed");
+            btn.classList.remove("hidden");
+          }
+        }, { once: true });
+      }
+    </script>
     <script src="../js/index.js" async defer></script>
   </body>
 </html>
